@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.5.4</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -36,11 +36,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>15</java.version>
+        <java.version>16</java.version>
 
         <!-- Melosys -->
-        <melosys.jsonschema.version>1.35.132</melosys.jsonschema.version>
-        <melosys.internt.kodeverk.version>5.15.70</melosys.internt.kodeverk.version>
+        <melosys.jsonschema.version>1.35.140</melosys.jsonschema.version>
+        <melosys.internt.kodeverk.version>5.15.84</melosys.internt.kodeverk.version>
         <melosys.brev.version>1.2.82</melosys.brev.version>
 
         <!-- NAV -->
@@ -48,21 +48,20 @@
         <abac.spring.version>1.6.0</abac.spring.version>
         <behandlingstatus.version>1.1.0</behandlingstatus.version>
         <doksys.dokumentproduksjon.version>3.3.4</doksys.dokumentproduksjon.version>
-        <joark.journalfoerinngaaende.version>0.0.21</joark.journalfoerinngaaende.version>
-        <token-support.version>1.3.7</token-support.version>
+        <token-support.version>1.3.8</token-support.version>
 
         <!-- Versjoner av eksterne biblioteker -->
         <archunit.version>0.19.0</archunit.version>
         <apache-httpclients.version>4.5.13</apache-httpclients.version>
-        <caffeine.version>3.0.2</caffeine.version>
-        <cxf.version>3.4.3</cxf.version>
+        <caffeine.version>3.0.3</caffeine.version>
+        <cxf.version>3.4.4</cxf.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-lang.version>3.9</commons-lang.version>
         <commons-text.version>1.8</commons-text.version>
         <findbugs.jsr305.version>3.0.2</findbugs.jsr305.version>
         <guava.version>30.1.1-jre</guava.version>
         <graphql-java.version>16.2</graphql-java.version>
-        <logback.version>1.2.3</logback.version>
+        <logback.version>1.2.5</logback.version>
         <logstash.version>6.6</logstash.version>
         <hikaricp.version>4.0.3</hikaricp.version>
         <ibmmq.version>9.0.5.0</ibmmq.version>
@@ -72,7 +71,6 @@
         <jms-api.version>2.0.1</jms-api.version>
         <micrometer-jvm-extras.version>0.2.2</micrometer-jvm-extras.version>
         <networknt.json-schema-validator.version>1.0.47</networknt.json-schema-validator.version>
-        <nimbus-jose-jwt.version>8.20.1</nimbus-jose-jwt.version>
         <ojdbc.version>18.3.0.0</ojdbc.version>
         <okhttp.version>4.9.1</okhttp.version>
         <oracle.version>18</oracle.version>
@@ -83,19 +81,22 @@
         <slf4j.version>1.7.30</slf4j.version>
         <springfox.version>3.0.0</springfox.version>
         <swagger.version>1.5.21</swagger.version>
-        <unleash.version>3.3.4</unleash.version>
+        <unleash.version>4.4.0</unleash.version>
 
         <!-- Transitive avhengiheter -->
-        <asm.version>9.1</asm.version>
+        <asm.version>9.2</asm.version>
         <bcprov-jdk15on.version>1.68</bcprov-jdk15on.version>
+        <cglib.version>3.3.0</cglib.version>
+        <classgraph.version>4.8.102</classgraph.version>
         <commons-logging.version>1.2</commons-logging.version>
+        <istack.version>3.0.12</istack.version>
         <javassist.version>3.27.0-GA</javassist.version>
         <jaxb2-basics-runtime.version>0.12.0</jaxb2-basics-runtime.version>
         <joda-time.version>2.10.10</joda-time.version>
-        <objenesis.version>3.1</objenesis.version>
-        <stax2-api.version>4.2.1</stax2-api.version>
-        <woodstox.version>6.2.3</woodstox.version>
-        <xmlsec.version>2.1.4</xmlsec.version>
+        <objenesis.version>3.2</objenesis.version>
+        <osgi.version>6.0.0</osgi.version>
+        <woodstox.version>6.2.6</woodstox.version>
+        <xmlsec.version>2.2.2</xmlsec.version>
         <medlemskapsunntak-api-v1.version>1.1</medlemskapsunntak-api-v1.version>
         <wiremock-standalone.version>2.27.2</wiremock-standalone.version>
     </properties>
@@ -218,11 +219,6 @@
                 <groupId>com.ibm.mq</groupId>
                 <artifactId>com.ibm.mq.allclient</artifactId>
                 <version>${ibmmq.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.nimbusds</groupId>
-                <artifactId>nimbus-jose-jwt</artifactId>
-                <version>${nimbus-jose-jwt.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.oracle.database.jdbc</groupId>
@@ -398,11 +394,6 @@
                 <version>3.13.0</version>
             </dependency>
             <dependency>
-                <groupId>org.codehaus.woodstox</groupId>
-                <artifactId>stax2-api</artifactId>
-                <version>${stax2-api.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.javassist</groupId>
                 <artifactId>javassist</artifactId>
                 <version>${javassist.version}</version>
@@ -422,6 +413,26 @@
                 <artifactId>asm</artifactId>
                 <version>${asm.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.osgi</groupId>
+                <artifactId>org.osgi.core</artifactId>
+                <version>${osgi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib-nodep</artifactId>
+                <version>${cglib.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.istack</groupId>
+                <artifactId>istack-commons-runtime</artifactId>
+                <version>${istack.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.classgraph</groupId>
+                <artifactId>classgraph</artifactId>
+                <version>${classgraph.version}</version>
+            </dependency>
 
             <!-- NAV felleskomponenter -->
             <dependency>
@@ -440,16 +451,6 @@
                 <version>${nav.tjenestespesifikasjoner.version}</version>
             </dependency>
             <dependency>
-                <groupId>no.nav.tjenester.fim</groupId>
-                <artifactId>no-nav-dok-tjenester-journalfoerinngaaende</artifactId>
-                <version>${joark.journalfoerinngaaende.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>no.nav.tjenestespesifikasjoner</groupId>
-                <artifactId>nav-fim-aktoer-v2-tjenestespesifikasjon</artifactId>
-                <version>${nav.tjenestespesifikasjoner.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>no.nav.tjenester</groupId>
                 <artifactId>nav-dokumentproduksjon-v3-tjenestespesifikasjon</artifactId>
                 <version>${doksys.dokumentproduksjon.version}</version>
@@ -458,11 +459,6 @@
             <dependency>
                 <groupId>no.nav.tjenestespesifikasjoner</groupId>
                 <artifactId>nav-fim-inntekt-v3-tjenestespesifikasjon</artifactId>
-                <version>${nav.tjenestespesifikasjoner.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>no.nav.tjenestespesifikasjoner</groupId>
-                <artifactId>nav-journal-v3-tjenestespesifikasjon</artifactId>
                 <version>${nav.tjenestespesifikasjoner.version}</version>
             </dependency>
             <dependency>
@@ -498,6 +494,12 @@
                 <groupId>no.nav.dok.metaforcemal</groupId>
                 <artifactId>melosysbrev</artifactId>
                 <version>${melosys.brev.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>servlet-api</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>no.nav.dok.metaforcemal</groupId>
@@ -604,7 +606,6 @@
                     <configuration>
                         <release>${java.version}</release>
                         <encoding>UTF-8</encoding>
-                        <compilerArgs>--enable-preview</compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -636,13 +637,13 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>-Xms256m -Dfile.encoding=UTF-8 --enable-preview</argLine>
+                        <argLine>-Xms256m -Dfile.encoding=UTF-8</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.1.2</version>
+                    <version>${maven-dependency-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
